--- a/study-planner/study-planner/Base.lproj/Main.storyboard
+++ b/study-planner/study-planner/Base.lproj/Main.storyboard
@@ -17,8 +17,8 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WYh-qe-U0M">
-                                <rect key="frame" x="160" y="244" width="94" height="48"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                <rect key="frame" x="148.5" y="244" width="117" height="60"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -72,6 +72,14 @@
                                     <constraint firstAttribute="width" constant="300" id="IwJ-Ui-6br"/>
                                 </constraints>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LYd-nQ-fFG">
+                                <rect key="frame" x="192" y="319" width="30" height="48"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <state key="normal" title="▶︎"/>
+                                <connections>
+                                    <action selector="playButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="WH5-pL-jQf"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -79,14 +87,17 @@
                             <constraint firstItem="WYh-qe-U0M" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9FJ-W8-Atw"/>
                             <constraint firstItem="wvJ-m5-JHD" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="D4w-CM-IbU"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="wvJ-m5-JHD" secondAttribute="bottom" constant="120" id="J6B-pZ-yMH"/>
+                            <constraint firstItem="LYd-nQ-fFG" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="KUT-QS-1gf"/>
                             <constraint firstItem="WYh-qe-U0M" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="200" id="ctT-8o-gdt"/>
                             <constraint firstItem="Pbp-x0-ecK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fSG-Nr-Pd3"/>
                             <constraint firstItem="wvJ-m5-JHD" firstAttribute="top" secondItem="Pbp-x0-ecK" secondAttribute="bottom" constant="20" id="hmQ-Vj-x0j"/>
+                            <constraint firstItem="LYd-nQ-fFG" firstAttribute="top" secondItem="WYh-qe-U0M" secondAttribute="bottom" constant="15" id="hvc-Sm-fFL"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="lbButton" destination="CgS-5p-SCO" id="RQn-Xv-Iep"/>
                         <outlet property="loopButton" destination="DBz-V4-Cbk" id="h7w-4U-KpR"/>
+                        <outlet property="playButton" destination="LYd-nQ-fFG" id="o1I-9Z-3Oj"/>
                         <outlet property="sbButton" destination="vNO-5Q-fnE" id="nYr-Nx-pQb"/>
                         <outlet property="studyButton" destination="U2Y-tg-eOt" id="qA4-2Y-uLY"/>
                         <outlet property="timerLabel" destination="WYh-qe-U0M" id="3ht-ky-8qE"/>
