add navigation bar, todo controller

--- a/study-planner/study-planner/Storyboards/Base.lproj/Main.storyboard
+++ b/study-planner/study-planner/Storyboards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="oTN-eo-BZm">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Item-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="study_planner" customModuleProvider="target" sceneMemberID="viewController">
@@ -23,7 +23,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Pbp-x0-ecK">
-                                <rect key="frame" x="57" y="562" width="300" height="80"/>
+                                <rect key="frame" x="57" y="513" width="300" height="80"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U2Y-tg-eOt">
                                         <rect key="frame" x="0.0" y="0.0" width="140" height="80"/>
@@ -48,7 +48,7 @@
                                 </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="wvJ-m5-JHD">
-                                <rect key="frame" x="57" y="662" width="300" height="80"/>
+                                <rect key="frame" x="57" y="613" width="300" height="80"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vNO-5Q-fnE">
                                         <rect key="frame" x="0.0" y="0.0" width="140" height="80"/>
@@ -82,47 +82,35 @@
                                     <action selector="playButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="WH5-pL-jQf"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GdV-JJ-Ads">
-                                <rect key="frame" x="192" y="782" width="30" height="60"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
-                                <state key="normal" title="⚙︎">
-                                    <color key="titleColor" systemColor="labelColor"/>
-                                </state>
-                                <connections>
-                                    <action selector="settingsButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="YOY-dB-bdt"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="WYh-qe-U0M" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9FJ-W8-Atw"/>
                             <constraint firstItem="wvJ-m5-JHD" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="D4w-CM-IbU"/>
-                            <constraint firstItem="GdV-JJ-Ads" firstAttribute="top" secondItem="wvJ-m5-JHD" secondAttribute="bottom" constant="40" id="Gzm-Hr-BRV"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="wvJ-m5-JHD" secondAttribute="bottom" constant="120" id="J6B-pZ-yMH"/>
                             <constraint firstItem="LYd-nQ-fFG" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="KUT-QS-1gf"/>
-                            <constraint firstItem="GdV-JJ-Ads" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="LgA-ZO-lCL"/>
                             <constraint firstItem="WYh-qe-U0M" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="200" id="ctT-8o-gdt"/>
                             <constraint firstItem="Pbp-x0-ecK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fSG-Nr-Pd3"/>
                             <constraint firstItem="wvJ-m5-JHD" firstAttribute="top" secondItem="Pbp-x0-ecK" secondAttribute="bottom" constant="20" id="hmQ-Vj-x0j"/>
                             <constraint firstItem="LYd-nQ-fFG" firstAttribute="top" secondItem="WYh-qe-U0M" secondAttribute="bottom" constant="15" id="hvc-Sm-fFL"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="w94-dR-uJi"/>
                     <connections>
                         <outlet property="lbButton" destination="CgS-5p-SCO" id="RQn-Xv-Iep"/>
                         <outlet property="loopButton" destination="DBz-V4-Cbk" id="h7w-4U-KpR"/>
                         <outlet property="playButton" destination="LYd-nQ-fFG" id="o1I-9Z-3Oj"/>
                         <outlet property="sbButton" destination="vNO-5Q-fnE" id="nYr-Nx-pQb"/>
-                        <outlet property="settingsButton" destination="GdV-JJ-Ads" id="Dq2-X2-wy9"/>
                         <outlet property="studyButton" destination="U2Y-tg-eOt" id="qA4-2Y-uLY"/>
                         <outlet property="timerLabel" destination="WYh-qe-U0M" id="3ht-ky-8qE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-836" y="-17"/>
+            <point key="canvasLocation" x="-1306" y="313"/>
         </scene>
-        <!--Settings View Controller-->
+        <!--Item-->
         <scene sceneID="t4A-oA-owW">
             <objects>
                 <viewController storyboardIdentifier="vc_settings" id="9Kd-4c-3dA" customClass="SettingsViewController" customModule="study_planner" customModuleProvider="target" sceneMemberID="viewController">
@@ -132,10 +120,46 @@
                         <viewLayoutGuide key="safeArea" id="1og-so-pDw"/>
                         <color key="backgroundColor" systemColor="systemGray2Color"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="Osc-lp-fNi"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="i6b-fn-vxF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="45" y="-17"/>
+            <point key="canvasLocation" x="-391" y="313"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="L3G-xH-As5">
+            <objects>
+                <viewController id="ShM-ax-gbc" customClass="TodoViewController" customModule="study_planner" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="uGr-pc-KiE">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="8Ww-rX-GPt"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="hJO-cu-YvS"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PBA-o0-l4f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="530" y="313"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="nuR-CN-JXR">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="oTN-eo-BZm" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Sqh-xP-Aki">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="TLc-9T-sO2"/>
+                        <segue destination="9Kd-4c-3dA" kind="relationship" relationship="viewControllers" id="3FM-0g-QSX"/>
+                        <segue destination="ShM-ax-gbc" kind="relationship" relationship="viewControllers" id="lT2-ii-CXh"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DFI-ei-4pU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-391" y="-528"/>
         </scene>
     </scenes>
     <resources>
